added hand emoji

--- a/src/App.css
+++ b/src/App.css
@@ -85,13 +85,13 @@ body {
   justify-content: space-between;
   /* border: 1px solid red; */
 }
-.howitworks {
+#howitworks {
   background-color: white;
   text-align: center;
-  margin: 8em 0;
+  margin: 6em 0;
   padding: 3em 0;
 }
-.howitworks h2 {
+#howitworks h2 {
   font-size: 2em;
 }
 
@@ -172,13 +172,13 @@ body {
   #google {
     margin-left: 5px;
   }
-  .howitworks {
+  #howitworks {
     /* border: 1px solid red; */
-    margin: 10em auto;
+    margin: 8em auto;
     padding: 0;
     align-items: center;
   }
-  .howitworks h2 {
+  #howitworks h2 {
     font-size: 2em;
   }
   .cardsbox {
